kbd-chooser (1.19) UNRELEASED; urgency=low

  [ Joey Hess ]
  * Stop writing to debootstrap_settings, dropping woody installation support.

  [ Colin Watson ]
  * If a keymap list entry has the same keymap name as a previous one but a
    different language list, create a new keymap for it. This is required to
    select the correct default for Croatian (closes: Ubuntu #14711).

 -- Joey Hess <joeyh@debian.org>  Mon,  8 Aug 2005 15:20:41 -0400

kbd-chooser (1.18) unstable; urgency=low

  * mount -t usbdevfs is no longer supported; use mount -t usbfs instead.
    As 2.4.27 also supports the new format, we drop the old one; older
    kernels should no longer be relevant for Etch.

 -- Frans Pop <fjp@debian.org>  Tue,  2 Aug 2005 00:38:00 +0200

kbd-chooser (1.17) unstable; urgency=low

  * Add missing debian-installer/uml-console template.
  * Use di_system_subarch_analyze rather than forking archdetect.
  * Updated translations:
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Colin Watson <cjwatson@debian.org>  Thu, 28 Jul 2005 11:06:50 +0100

kbd-chooser (1.16) unstable; urgency=low

  * Matt Kraai
    - Do not include <linux/keyboard.h>. (Closes: #317861)
    - Add self to Uploaders.

 -- Matt Kraai <kraai@debian.org>  Sun, 17 Jul 2005 06:12:44 -0700

kbd-chooser (1.15) unstable; urgency=low

  * Colin Watson
    - Give debian/kbd-chooser.templates the same mtime as
      debian/kbd-chooser.templates-in, so that po2debconf doesn't decide
      that it needs to run debconf-updatepo on every binary package build.
    - Improve copyright file a little, thanks to lintian.
    - Squash various signedness warnings from gcc-4.0.
  * Frans Pop
    - Fix segfault if localechooser is not present by setting default
      for debian-installer/language. (Closes: #314721)
    - While we're at it, improve check for debian-installer/locale.
  * Updated translations: 
    - Vietnamese (vi.po) added by Clytie Siddall
