@@ -7,6 +7,9 @@ kbd-chooser (1.19) UNRELEASED; urgency=low
   * If a keymap list entry has the same keymap name as a previous one but a
     different language list, create a new keymap for it. This is required to
     select the correct default for Croatian (closes: Ubuntu #14711).
+  * Rip out all of the code to manually fetch localised templates; cdebconf
+    has known how to deal with this itself since 2002/2003 or so. Patch from
+    Matthias Urlichs via Ubuntu.
 
  -- Joey Hess <joeyh@debian.org>  Mon,  8 Aug 2005 15:20:41 -0400
 
